--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.6"
   },
   "scripts": {
     "start": "react-scripts start",
