--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://kigpand.github.io/cook-recipe/",
   "eslintConfig": {
     "extends": [
       "react-app",
