--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.59.3",
     "sass-loader": "^13.2.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.6"
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.26",
     "gh-pages": "^5.0.0"
   }
 }
